--- a/app/globals.css
+++ b/app/globals.css
@@ -1,25 +1,24 @@
 @import "tailwindcss";
+@tailwind utilities;
 
-:root {
-  --background: #ffffff;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  body {
+    @apply bg-white text-black;
   }
 }
 
-body {
+@layer components {
+  .link {
+    @apply text-blue-500 hover:text-blue-700;
+  }
 
+  .button {
+    @apply font-medium text-[16px]/[125%] text-center text-[#101828] hover:text-[#0b44cd] transition-colors duration-300;
+  }
+}
 
-  font-family: Arial, Helvetica, sans-serif;
+@layer utilities {
+  .container {
+    @apply mx-auto px-4;
+  }
 }
