splited catalog to 3 components and added 2 global stores for catog page

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,9 @@
   body {
     @apply bg-white text-black;
   }
+  button{
+    @apply cursor-pointer;
+  }
 }
 
 @layer components {
@@ -11,8 +14,12 @@
     @apply text-blue-500 hover:text-blue-700;
   }
 
-  .button {
+  .nav-item {
     @apply font-medium text-[16px]/[125%] text-center text-[#101828] hover:text-[#0b44cd] transition-colors duration-300;
+  }
+
+  .button {
+    @apply bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition-colors duration-300 shadow-lg;
   }
 }
 
